vlib/v/parser/tests/unnecessary_mut.vv
fn main() {
	mut x := 0
	if mut x == 0 {
		println(true)
	}
}
